# wanderer

./: .all-contributorsrc  .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  generate_and_open_docs.bat  vcpkg.json
proto/: CMakeLists.txt  animated.proto  animation.proto  area.proto  associated_entity.proto  chase.proto  color.proto  depth_drawable.proto  drawable.proto  float2.proto  float3.proto  hitbox.proto  inventory.proto  level.proto  map_object.proto  movable.proto  object.proto  particle.proto  plant.proto  point_light.proto  portal.proto  rect.proto  save.proto  settings.proto  spawnpoint.proto  tile.proto  tile_animation.proto  tile_layer.proto  tile_object.proto  tilemap.proto  tileset.proto  time_of_day.proto  trigger.proto  vector.proto
source/: CMakeLists.txt  assert.cpp  assert.hpp  build.hpp  common.hpp  constants.hpp  doxy.hpp  logging.cpp  logging.hpp  main.cpp  wanderer_game.cpp  wanderer_game.hpp
source/io/: directories.cpp
source/wanderer/: common.hpp  fwd.hpp  wanderer_game.cpp  wanderer_game.hpp
src/: CMakeLists.txt  application.cpp  application.hpp  docs.hpp  doxygen_docs.h  doxygen_docs.hpp  game.cpp  game.hpp  game_loop.hpp  main.cpp  profile.hpp  semi_fixed_game_loop.hpp  wanderer_app.cpp  wanderer_app.hpp  wanderer_engine.cpp  wanderer_engine.hpp  wanderer_std.hpp
src/audio/: sound_effect.cpp  sound_effect.h  sound_engine.cpp  sound_engine.h  sound_id.h
src/centurion/: bool_converter.h  font.cpp  font.h  image.cpp  image.h  renderer.cpp  renderer.h  window.cpp  window.h  window_listener.h
src/common/: buffer.hpp  cstr.hpp  depth.hpp  float2.hpp  ints.hpp  map_id.hpp  maybe.hpp  milliseconds.hpp  ref.hpp  str.hpp  texture_id.hpp  tile_id.hpp
src/component/: aabb.h  aabb.hpp  animated.h  animated.hpp  animated_tile.h  animated_tile.hpp  begin_attack_event.hpp  begin_humanoid_move_event.hpp  binds.h  binds.hpp  button.hpp  collision.h  container_trigger.hpp  cursors.hpp  depth_drawable.h  depth_drawable.hpp  drawable.h  end_attack_event.hpp  end_humanoid_move_event.hpp  entity_state.h  game_loop.h  game_object.h  game_object.hpp  hitbox.h  hitbox.hpp  humanoid_state.h  humanoid_state.hpp  in_bounds.h  inventory.hpp  item.hpp  key_bind.hpp  level_switch_animation.hpp  map_position.h  map_position.hpp  menu.hpp  movable.h  movable.hpp  object.hpp  particle.hpp  player.h  (+17 more)
src/components/: CMakeLists.txt  animated_tile.hpp  animation.hpp  associated_entity.hpp  associated_object.hpp  bed_trigger.hpp  binds.hpp  chase.hpp  container_trigger.hpp  custom_animation.hpp  drawable.hpp  float3.hpp  hitbox.hpp  humanoid.hpp  humanoid_state.hpp  inventory.hpp  key_bind.hpp  level.hpp  level_size.hpp  level_switch_target.hpp  movable.hpp  object.hpp  outside_level.hpp  particle.hpp  plant.hpp  player.hpp  point_light.hpp  portal.hpp  render_bounds.hpp  roam.hpp  settings.hpp  spawnpoint.hpp  tile.hpp  tile_animation.hpp  tile_layer.hpp  tile_object.hpp  tilemap.hpp  tileset.hpp  time_of_day.hpp  trigger.hpp  (+1 more)
src/controller/: controller.h  controller_factory.h  controller_impl.cpp  controller_impl.h  fixed_timestep_loop.cpp  fixed_timestep_loop.h  input.cpp  input.h  input_handler.cpp  input_handler.h  key_state_manager.cpp  key_state_manager.h  mouse_state_manager.cpp  mouse_state_manager.h  player_controller.cpp  player_controller.h  smooth_fixed_timestep_loop.cpp  smooth_fixed_timestep_loop.h  wanderer_controller.h  wanderer_controller_factory.h  wanderer_controller_impl.cpp  wanderer_controller_impl.h
src/core/: CMakeLists.txt  aabb_tree.cpp  aabb_tree.hpp  abby_utils.hpp  action.cpp  action.h  action.hpp  add_humanoid_state_dependencies.cpp  add_humanoid_state_dependencies.h  add_humanoid_state_dependencies.hpp  algorithms.hpp  animated.h  animation.cpp  animation.h  application.cpp  application.h  application.hpp  bad_state_exception.cpp  bad_state_exception.h  centurion_utils.hpp  common_concepts.hpp  cursor_manager.cpp  cursor_manager.hpp  day_of_week.cpp  day_of_week.hpp  delta.hpp  depth.hpp  direction.h  direction.hpp  drawable.h  event_connections.cpp  event_connections.h  event_connections.hpp  game.cpp  game.h  game.hpp  game_constants.h  game_constants.hpp  game_impl.cpp  game_impl.h  (+58 more)
src/ctx/: active_menu.hpp  binds.hpp  day_night_cycle.hpp  outside_level.hpp  player.hpp  render_bounds.hpp  settings.hpp  tileset.hpp  time_of_day.hpp  viewport.hpp
src/events/: CMakeLists.txt  begin_attack_event.hpp  begin_humanoid_move_event.hpp  bond_animation_halfway_event.hpp  button_pressed_event.hpp  close_inventory_event.hpp  custom_animation_halfway_event.hpp  day_changed_event.hpp  end_attack_event.hpp  end_humanoid_move_event.hpp  fullscreen_toggled.hpp  fullscreen_toggled_event.hpp  humanoid_events.hpp  integer_scaling_toggled_event.hpp  interact.hpp  interact_event.hpp  inventory_events.hpp  level_fade_events_event.hpp  load_game_event.hpp  menu_events.hpp  menu_switched_event.hpp  quit_event.hpp  show_inventory_event.hpp  sleep_event.hpp  spawn_particles_event.hpp  switch_map_event.hpp  switch_menu.hpp  switch_menu_event.hpp
src/io/: CMakeLists.txt  directories.cpp  directories.hpp  files_directory.cpp  files_directory.hpp  ini.hpp  rune_configuration.cpp  rune_configuration.hpp
src/menu/: key_bind.hpp  key_trigger.hpp  menu.cpp  menu.hpp  menu_action.hpp  menu_button.cpp  menu_button.hpp  menu_constants.hpp  menu_id.hpp  menu_manager.cpp  menu_manager.hpp
src/model/: direction.h  model.h  model_factory.h  model_impl.cpp  model_impl.h  objects.h  vector_2.cpp  vector_2.h
src/parse/: action_parser.cpp  action_parser.h  key_bind_parser.cpp  key_bind_parser.h  menu_builder.cpp  menu_button_parser.cpp  menu_button_parser.h  menu_parser.cpp  menu_parser.h  sound_engine_parser.cpp  sound_engine_parser.h
src/proto/: animated.proto  area.proto  chase.proto  color.proto  (+13 more)
test/: CMakeLists.txt  bool_converter_test.cpp  font_test.cpp  objects_test.cpp  rectangle_test.cpp  renderer_test.cpp  some_test.cpp  test_main.cpp  vector_2_test.cpp  window_test.cpp
(+1740 files in other folders)
